[CXO-10991] update